--- a/css/login/login-register.css
+++ b/css/login/login-register.css
@@ -262,7 +262,7 @@
     cursor: pointer;
     font-size: 16px;
     width: 100%;
-    background-color: #209b60;
+    background-color: #209b60 !important;
 }
 .btn-forget:hover{
     color: #FFFFFF;
